--- a/ecommerce_app/templates/base.html
+++ b/ecommerce_app/templates/base.html
@@ -138,77 +138,59 @@
     <body>
     
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-white border-bottom px-3">
-        <div class="container-fluid">
-            <!-- Logo -->
-            <a class="navbar-brand d-flex align-items-center" href="/">
-                
-                <span class="text-danger fw-bold">Best Time</span>
-            </a>
-    
-            <div style="margin-left: 100px;height: 45px; border-radius: 15px;background-color: #f5f5f5;width: 600px;display: flex;justify-content: center;align-items: center;" class="input-group  ">
-              <input style="height: 40px;border-color:#f5f5f5;background-color:#f5f5f5 ;border-radius: 15px; " type="text" class="form-control search-input" placeholder="Watchs" aria-label="Search">
-              <button style="border-radius: 15px; background-color: #ee4d2d; height: 45px; width: 85px; color: white;margin-left: 5px" class=" search-button" type="button">Search</button>
-            </div>
-            
-    
-        
+   <!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-white border-bottom px-3">
+  <div class="container-fluid">
+      <!-- Logo -->
+      <a class="navbar-brand d-flex align-items-center" href="/">
+          <span class="text-danger fw-bold">Best Time</span>
+      </a>
 
-    
-            <!-- Profile Dropdown -->
-            <div class="dropdown ms-auto profile-dropdown">
+      <!-- Navbar Buttons -->
+      <div class="d-flex align-items-center">
+          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/products/list">Products</a>
+      </div>
 
+      <div style="margin-left: 100px;height: 45px; border-radius: 15px;background-color: #f5f5f5;width: 600px;display: flex;justify-content: center;align-items: center;" class="input-group  ">
+          <input style="height: 40px;border-color:#f5f5f5;background-color:#f5f5f5 ;border-radius: 15px; " type="text" class="form-control search-input" placeholder="Watchs" aria-label="Search">
+          <button style="border-radius: 15px; background-color: #ee4d2d; height: 45px; width: 85px; color: white;margin-left: 5px" class=" search-button" type="button">Search</button>
+      </div>
 
-              {% if request.user.is_authenticated  %}
-              <button style="height: 45px;width: 100px;" class=" user-name-drop-dwon-list-btn dropdown-toggle d-flex align-items-center" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="ms-2"> {{ request.user.username|capfirst }} </span>
-            </button>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> My Profile</a></li>
-                <li><a class="dropdown-item" href="{% url 'cart_view' %}"><i class="bi bi-cart"></i> My Cart <span class="icon-badge">9+</span></a></li>
-                <li><a class="dropdown-item" href="#"><i class="bi bi-envelope"></i> Messages <span class="icon-badge">9+</span></a></li>
-
-
-
-                <li>
-
+      <!-- Profile Dropdown -->
+      <div class="dropdown ms-auto profile-dropdown">
+          {% if request.user.is_authenticated %}
+          <button style="height: 45px;width: 100px;" class=" user-name-drop-dwon-list-btn dropdown-toggle d-flex align-items-center" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="ms-2"> {{ request.user.username|capfirst }} </span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+              <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> My Profile</a></li>
+              <li><a class="dropdown-item" href="{% url 'cart_view' %}"><i class="bi bi-cart"></i> My Cart <span class="icon-badge">9+</span></a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-envelope"></i> Messages <span class="icon-badge">9+</span></a></li>
+              <li>
                   <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                    {% csrf_token %}
-                   
-
-                    <button type="submit" class="dropdown-item btn btn-danger">
-                      <i class="bi bi-gear"></i> Logout
-                  </button>
-                </form>
-
-               
-                
-                
-                </li>
-                <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
-            </ul>
-       
-        
-
-             
+                      {% csrf_token %}
+                      <button type="submit" class="dropdown-item btn btn-danger">
+                          <i class="bi bi-gear"></i> Logout
+                      </button>
+                  </form>
+              </li>
+              <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
+          </ul>
           {% else %}
           <button style="height: 45px;width: 100px;" class=" user-name-drop-dwon-list-btn dropdown-toggle d-flex align-items-center" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="ms-2"> Login </span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-            <li><a class="dropdown-item" href="/account/login/?user_type=buyer"><i class="bi bi-person"></i> Login</a></li>
-            <li><a class="dropdown-item" href="/account/registration/?user_type=buyer"><i class="bi bi-cart"></i> Register<span class="icon-badge">9+</span></a></li>
-            <li><a class="dropdown-item" href="#"><i class="bi bi-envelope"></i> Messages <span class="icon-badge">9+</span></a></li>
-            <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
-        </ul>
-
+              <span class="ms-2"> Login </span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+              <li><a class="dropdown-item" href="/account/login/?user_type=buyer"><i class="bi bi-person"></i> Login</a></li>
+              <li><a class="dropdown-item" href="/account/registration/?user_type=buyer"><i class="bi bi-cart"></i> Register<span class="icon-badge">9+</span></a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-envelope"></i> Messages <span class="icon-badge">9+</span></a></li>
+              <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
+          </ul>
           {% endif %}
-              
-
-
-            </div>
-        </div>
-    </nav>
+      </div>
+  </div>
+</nav>
     
     <!-- Bootstrap JS (required for dropdowns) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
