--- a/ecommerce_app/templates/base.html
+++ b/ecommerce_app/templates/base.html
@@ -175,7 +175,7 @@
                       </button>
                   </form>
               </li>
-              <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
+              <!-- <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li> -->
           </ul>
           {% else %}
           <button style="height: 45px;width: 100px;" class=" user-name-drop-dwon-list-btn dropdown-toggle d-flex align-items-center" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
@@ -185,7 +185,7 @@
               <li><a class="dropdown-item" href="/account/login/?user_type=buyer"><i class="bi bi-person"></i> Login</a></li>
               <li><a class="dropdown-item" href="/account/registration/?user_type=buyer"><i class="bi bi-cart"></i> Register<span class="icon-badge">9+</span></a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-envelope"></i> Messages <span class="icon-badge">9+</span></a></li>
-              <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li>
+              <!-- <li><a class="dropdown-item" href="/link"><i class="bi bi-gear"></i> Account setting</a></li> -->
           </ul>
           {% endif %}
       </div>
